fixed validation text alignment and cursor:pointer area

--- a/src/sass/landing_pages/japan_2.scss
+++ b/src/sass/landing_pages/japan_2.scss
@@ -70,7 +70,7 @@ form {
         position: relative;
         @media (min-width: 576px) {
             flex-direction: row;
-            justify-content: center;
+            justify-content: flex-start;
         }
 
         input[type='email'] {
@@ -663,7 +663,6 @@ form {
 
 .twb-buttons {
     @include flex-center;
-    cursor: pointer;
 
     ul {
         display: flex;
